--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <select id = "speed">
             <option value= "100">Slow</option>;
             <option value= "80">Medium</option>;
-            <option value = "6 0">Fast</option>;
+            <option value = "60">Fast</option>;
         </select>
         <button class = "button" id = "back">Back</button>
     </div>
